Minor Changes
